tests/NormalTests/paczka1/fuzzy1/79400090.err
Error in line 11: xxJST A576 25,75
Error in line 23: S754 S733 87,4
Error in line 33: Ltqyjq A576 42,1
